<resources>
    <string name="app_name">考料</string>
    <string name="skip_str">跳过</string>
    <string name="input_phone_str">请输入手机号码</string>
    <string name="get_code_str">获取验证码</string>
    <string name="login_str">登陆</string>
    <string name="agreement_str">注册即表示您已阅读，并同意《用户注册协议》</string>
    <string name="home_str">首页</string>
    <string name="me_str">我的</string>
    <string name="search_str">请输入您要搜索的内容</string>
    <string name="canclr_str">取消</string>
    <string name="experience_str">经验帖</string>
    <string name="consultation_str">1v1咨询</string>
    <string name="data_str">备考资料</string>
    <string name="shared_str">转发</string>
    <string name="colletion_str">收藏</string>
    <string name="private_msg_str">私信TA</string>
    <string name="go_buy_str">去购买</string>
    <string name="add_follow">+关注</string>
    <string name="okbuy_str">购买确认</string>
    <string name="test">测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</string>
    <string name="send_str">发布</string>
    <string name="send_goods">发送商品</string>


    <string name="selector_folder_all_easy_photos">所有图片</string>

    <string name="selector_easy_photos">选择</string>

    <!--http://stackoverflow.com/questions/17502824/whats-wrong-with-this-format-string-->
    <string name="selector_action_done_easy_photos">完成(%1$d/%2$d)</string>

    <string name="selector_preview_easy_photos">预览</string>

    <string name="selector_reach_max_image_hint_easy_photos">最多只能选择%d张图片</string>

    <string name="msg_no_camera_easy_photos">无法启动相机！</string>

    <string name="camera_temp_file_error_easy_photos">图片错误</string>

    <string name="selector_permission_error_easy_photos">权限错误，无法正常工作！</string>

    <string name="selector_image_size_error_easy_photos">图片的宽度必须大于%1$d,高度必须大于%2$d</string>

    <string name="selector_image_type_error_easy_photos">不支持此图片格式</string>

    <string name="edit_easy_photos">编辑</string>

    <string name="empty_easy_photos">清空</string>

    <string name="no_photos_easy_photos">没有符合要求的图片，拍一张吧</string>

    <string name="permissions_again_easy_photos">请点击并允许相关权限</string>

    <string name="permissions_die_easy_photos">请点击并在设置中允许相关权限</string>

    <string name="original_easy_photos">原图</string>

    <string name="preview_current_number_easy_photos">%1$d/%2$d</string>

    <string name="done_easy_photos">完成</string>

    <string name="cancel_easy_photos">取消</string>

    <string name="template_easy_photos">模板</string>

    <string name="text_sticker_easy_photos">文字</string>

    <string name="text_sticker_date_easy_photos">日期</string>

    <string name="text_sticker_hint_easy_photos">双击编辑</string>

    <string name="text_sticker_hint_name_easy_photos">自定义</string>

    <string name="picture_selection_easy_photos">图片选择</string>

    <string name="puzzle_easy_photos">拼一张</string>

    <string name="select_puzzle_photos">请选择2 \- 9张照片</string>

    <string name="gif_easy_photos">动图</string>

</resources>
