<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@mipmap/send_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp">

    <LinearLayout
        android:background="@mipmap/circle_bg"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginLeft="@dimen/dp7"
        android:layout_marginRight="@dimen/dp6"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp98"
        >

        <TextView
            android:id="@+id/experience_home_tv"
            android:gravity="center"
            android:text="@string/experience_str"
            android:drawableTop="@mipmap/experience_icon"
            android:textColor="@color/gray_333"
            android:textSize="@dimen/dp11"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:drawablePadding="@dimen/dp5"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/consultation_home_tv"
            android:drawablePadding="@dimen/dp5"
            android:gravity="center"
            android:text="@string/consultation_str"
            android:drawableTop="@mipmap/consultation_icon"
            android:textColor="@color/gray_333"
            android:textSize="@dimen/dp11"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/data_home_tv"
            android:drawablePadding="@dimen/dp5"
            android:gravity="center"
            android:text="@string/data_str"
            android:drawableTop="@mipmap/data_icon"
            android:textColor="@color/gray_333"
            android:textSize="@dimen/dp11"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:id="@+id/cancle_dialog"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/send_x_gray"
        />
    </RelativeLayout>
</LinearLayout>