<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp288">

            <android.support.v4.view.ViewPager
                android:id="@+id/details_banner_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp288" />

            <TextView
                android:id="@+id/details_banner_index"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp22"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginBottom="@dimen/dp15"
                android:background="@drawable/circle_gray_details"
                android:gravity="center"
                android:text="1/1"
                android:textColor="@color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp15"
                android:text="¥240/30分钟"
                android:textColor="@color/black"
                android:textSize="@dimen/dp22"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp15"
                android:text="考研秘诀，考研大法"
                android:textColor="@color/price_red"
                android:textSize="@dimen/dp12" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp18"
            android:layout_marginRight="@dimen/dp21"
            android:lineSpacingExtra="@dimen/dp5"
            android:text="考研阵联盟，考研多年总结经验，1对1专业定制辅导"
            android:textColor="@color/gray_333"
            android:textSize="@dimen/dp16"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp5"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/gray_5" />

        <RelativeLayout
            android:id="@+id/student_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15">

            <ImageView
                android:id="@+id/details_user_icon"
                android:layout_width="@dimen/dp39"
                android:layout_height="@dimen/dp39"
                android:layout_marginLeft="@dimen/dp16"
                android:src="@mipmap/orange_logo" />

            <Button
                android:id="@+id/details_add_follow"
                android:layout_width="@dimen/dp56"
                android:layout_height="@dimen/dp25"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp25"
                android:layout_marginRight="@dimen/dp16"
                android:background="@drawable/circle_red"
                android:gravity="center"
                android:text="@string/add_follow"
                android:textColor="@color/white"
                android:textSize="@dimen/dp12" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp15"
                android:layout_toLeftOf="@id/details_add_follow"
                android:layout_toRightOf="@id/details_user_icon"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/details_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:maxLength="7"
                        android:text="锦里学长"
                        android:textColor="@color/gray_333"
                        android:textSize="@dimen/dp15" />

                    <TextView
                        android:id="@+id/details_experience_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp9"
                        android:background="@drawable/circle_red_white"
                        android:padding="@dimen/dp2"
                        android:text="@string/experience_str"
                        android:textColor="@color/price_red"
                        android:textSize="@dimen/dp10" />

                    <TextView
                        android:id="@+id/details_consultation_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp7"
                        android:background="@drawable/circle_red_white"
                        android:padding="@dimen/dp2"
                        android:text="@string/consultation_str"
                        android:textColor="@color/price_red"
                        android:textSize="@dimen/dp10" />

                    <TextView
                        android:id="@+id/details_data_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp7"
                        android:background="@drawable/circle_red_white"
                        android:padding="@dimen/dp2"
                        android:text="@string/data_str"
                        android:textColor="@color/price_red"
                        android:textSize="@dimen/dp10" />
                </LinearLayout>


                <TextView
                    android:id="@+id/major_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp9"
                    android:maxLines="1"
                    android:text="北京理工大学|土木工程建筑世界专业"
                    android:textColor="@color/gray_999"
                    android:textSize="@dimen/dp12" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp5"
            android:layout_marginTop="@dimen/dp20"
            android:background="@color/gray_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp2"
                android:layout_height="@dimen/dp11"
                android:layout_gravity="center_vertical"
                android:background="@color/price_red" />

            <TextView
                android:id="@+id/des1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp12"
                android:text="课程介绍"
                android:textColor="@color/gray_333"
                android:textSize="@dimen/dp14"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:maxLength="200"
            android:id="@+id/des2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp17"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginRight="@dimen/dp25"
            android:text="20世界，在地球历史中,\n 测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试"
            android:textColor="@color/gray_333"
            android:textSize="@dimen/dp14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp5"
            android:layout_marginTop="@dimen/dp20"
            android:background="@color/gray_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp2"
                android:layout_height="@dimen/dp11"
                android:layout_gravity="center_vertical"
                android:background="@color/price_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp12"
                android:text="学长周边"
                android:textColor="@color/gray_333"
                android:textSize="@dimen/dp14"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/details_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/gray_5" />
    </LinearLayout>

</ScrollView>